# TPFINAL-COMPLETO

./: AOK_AmazonEKSClusterAutoscalerPolicy.json  API-policy.json  Airflow-EKS.yaml  CreateDBInstance-policy.json  EKSDescribeCluster-policy.json  EKSPassRole-policy.json  README.md  UpdateAssumeRolePolicy.json  cluster-autoscaler-policy.json  s3_QuickSight-policy.json  setup1.sh  setup2.sh  setup3.sh  setup4.sh  setup5.sh
Outputs_s3/results/: CMH_2010_result.csv  SubTotBOS2010.csv  SubTotCMH2010.csv  SubTotDCA2010.csv  SubTotJFK2010.csv  SubTotLGA2010.csv  SubTotRDU2010.csv
aws-airflow-helm/: airflow-db-secret.yml  dockerfile  efs-pvc.yml  set_env.sh  values.yaml
tp/: .env  README.md  README_Explanations.md  aa  docker-compose.yaml  dockerfile  pyproject.toml  pytest.ini
tp/dags/: Procesar_dag.py  sqLite_cli.py  sqlConnexion.py  sqlPostgresCli.py
tp/dags/convert_train/: _convert copy.py  _convert.py  _general.py  _graphics.py  _train copy.py  _train.py  s3_conn.py
tp/dags/sql/: create_env.sql
